--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
-
+    implementation("com.squareup.okhttp3:okhttp:4.6.0")
 
 }
