--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "pl.kamilbaranowski.chatapp"
-        minSdkVersion 19
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -40,5 +40,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
     implementation("com.squareup.okhttp3:okhttp:4.6.0")
+    implementation "com.xwray:groupie:2.8.0"
 
 }
