--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:19.3.0'
     implementation("com.squareup.okhttp3:okhttp:4.6.0")
     implementation "com.xwray:groupie:2.8.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
