--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.6.0")
     implementation "com.xwray:groupie:2.8.0"
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.auth0.android:jwtdecode:2.0.0'
 
 }
