--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,17 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.auth0.android:jwtdecode:2.0.0'
 
+    //------------------------------------------
+    def view_model_version = "2.2.0-rc02"
+    implementation "androidx.lifecycle:lifecycle-extensions:$view_model_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$view_model_version"
+
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+
+
+    def retrofit_version = "2.6.2"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
 }
